@@ -45,7 +45,7 @@ $Date$
 <!ENTITY lfs-gcc-version              "4.1.2">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20070708">
+<!ENTITY blfs-bootscripts-version     "20070709">
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
 
 <!ENTITY blfs-wiki                    "http://wiki.&lfs-domainname;/blfs/wiki">
@@ -182,7 +182,7 @@ $Date$
 <!ENTITY mc-version                   "4.6.1">
 <!ENTITY sysstat-version              "7.0.4">
 <!ENTITY apache-ant-version           "1.7.0">
-<!ENTITY dbus-version                 "0.62">
+<!ENTITY dbus-version                 "1.0.2">
 <!ENTITY hal-version                  "0.5.9">
 
 <!-- Chapter 12 -->
