@@ -4,12 +4,12 @@
   <!ENTITY % general-entities SYSTEM "../../general.ent">
   %general-entities;
 
-  <!ENTITY dbus-download-http "http://dbus.freedesktop.org/releases/dbus-&dbus-version;.tar.gz">
+  <!ENTITY dbus-download-http "http://dbus.freedesktop.org/releases/dbus/dbus-&dbus-version;.tar.gz">
   <!ENTITY dbus-download-ftp  "ftp://ftp.fu-berlin.de/unix/linux/mirrors/gentoo/distfiles/dbus-&dbus-version;.tar.gz">
-  <!ENTITY dbus-md5sum        "ba7692f63d0e9f1ef06703dff56cb650b">
-  <!ENTITY dbus-size          "1.7 MB">
-  <!ENTITY dbus-buildsize     "69.4 MB (includes building and installing all docs)">
-  <!ENTITY dbus-time          "1.0 SBU">
+  <!ENTITY dbus-md5sum        "0552a9b54beb4a044951b7cdbc8fc855">
+  <!ENTITY dbus-size          "1.3 MB">
+  <!ENTITY dbus-buildsize     "39.5 MB (includes building and installing all docs)">
+  <!ENTITY dbus-time          "0.3 SBU">
 ]>
 
 <sect1 id="dbus" xreflabel="D-BUS-&dbus-version;">
@@ -63,79 +63,15 @@
 
     <bridgehead renderas="sect3">D-BUS Dependencies</bridgehead>
 
+    <bridgehead renderas="sect4">Required</bridgehead>
+    <para role="required"><xref linkend="expat"/> or <xref linkend="pkgconfig"/>
+    and <xref linkend="libxml2"/></para>
+
     <bridgehead renderas="sect4">Optional</bridgehead>
-    <para role="optional"><xref linkend="pkgconfig"/>,
-    <xref linkend="expat"/> or <xref linkend="libxml2"/>,
-    <xref linkend="glib2"/>,
-    <xref linkend="gtk2"/>,
-    <xref linkend="qt"/>,
-    <ulink url="http://www.trolltech.com/products/qt">Qt-4.x.x</ulink>,
-    <xref linkend="x-window-system"/>,
-    <xref linkend="gcc"/> (for the Java compiler and tools),
-    <ulink url="http://nz.cosc.canterbury.ac.nz/~greg/python/Pyrex/">Pyrex</ulink>
-    (<ulink url="ftp://ftp.fu-berlin.de/unix/linux/mirrors/gentoo/distfiles/Pyrex-0.9.4.1.tar.gz">version
-    0.9.4.1</ulink> is known to work and requires <xref linkend="python"/>),
-    <ulink url="http://www.mono-project.com/GtkSharp">GtkSharp-1.0.x</ulink>
-    (requires <ulink url="http://go-mono.org">Mono</ulink>),
-    <ulink url="http://go-mono.com/sources-stable/">Monodoc</ulink>,
+    <para role="optional"><xref linkend="x-window-system"/>,
     <xref linkend="doxygen"/> (to generate the API documentation), and
     <ulink url="http://cyberelk.net/tim/xmlto/">xmlto</ulink>
     (to generate HTML documentation and manuals)</para>
-
-    <para>Listed below are some additional notes about the dependencies</para>
-
-    <itemizedlist spacing="compact">
-      <listitem>
-        <para>Review the information from running
-        <command>./configure --help</command> for the available parameters to
-        pass to the <command>configure</command> script to enable the various
-        dependencies.</para>
-      </listitem>
-      <listitem>
-        <para>To build the <application>Mono</application> bindings, you must
-        have <application>GtkSharp</application> installed. If you wish to use
-        recent versions of <application>GtkSharp</application>, you'll need to
-        make some trivial patches to the <application>D-BUS</application>
-        sources. See <ulink url="http://www.mono-project.com/GtkSharpUpgrade"/>
-        for details.</para>
-      </listitem>
-      <listitem>
-        <para>If you have a recent version of <ulink
-        url="http://go-mono.com/sources-stable/">Monodoc</ulink> installed
-        (&gt;= 1.1.10) and you passed the <option>--enable-mono-docs</option>
-        parameter to <command>configure</command>, the
-        <application>D-BUS</application> build will fail. You can review the
-        parts of this patch (<ulink
-        url="http://www.mail-archive.com/frugalware-darcs@frugalware.org/msg10156.html"/>)
-        that apply to the <application>Monodoc</application> installation, to
-        fix the build problems. Note this is untested by the BLFS Team, but
-        should work just fine.</para>
-      </listitem>
-    </itemizedlist>
-
-    <bridgehead renderas="sect4" id="hal-requirements"
-    xreflabel="HAL Requirements">HAL Requirements</bridgehead>
-
-    <para><xref linkend="glib2"/> must be installed before you begin building
-    <application>D-BUS</application> if you plan on installing
-    <xref linkend="hal"/>. <application>GLib</application> is required to build
-    the <filename class='libraryfile'>libdbus-glib</filename> library, which is
-    required by the <application>HAL</application> daemon.</para>
-
-    <para>If you plan on using <application>HAL</application> with
-    <application>KDE</application>, you'll need to link
-    <application>D-BUS</application> with the <application>Qt</application>
-    libraries. Ensure you've installed <application>Qt</application> before
-    beginning the <application>D-BUS</application> installation.</para>
-
-    <para>If you desire to use the <xref linkend="hal-device-manager"/>
-    program, <ulink url="http://nz.cosc.canterbury.ac.nz/~greg/python/Pyrex/">
-    Pyrex</ulink> (note the known working version listed in the dependencies)
-    must be installed before you begin building
-    <application>D-BUS</application> as the <application>D-BUS</application>
-    <application>Python</application> bindings are required. You will also
-    need to remove the <parameter>--disable-python</parameter> parameter from
-    the <command>configure</command> command in the instructions below.</para>
 
     <para condition="html" role="usernotes">User Notes:
     <ulink url="&blfs-wiki;/dbus"/></para>
@@ -174,8 +110,7 @@ useradd -c "D-BUS Message Daemon User" -d /dev/null \
 
 <screen><userinput>./configure --prefix=/usr \
             --sysconfdir=/etc \
-            --localstatedir=/var \
-            --disable-python &amp;&amp;
+            --localstatedir=/var &amp;&amp;
 make</userinput></screen>
 
     <para>The <option>--enable-doxygen-docs</option> parameter does not work
@@ -194,15 +129,23 @@ make</userinput></screen>
 
 <screen role="root"><userinput>make install &amp;&amp;
 install -v -m755 -d /usr/share/doc/dbus-&dbus-version; &amp;&amp;
-install -v -m644 doc/{TODO,*.{dtd,xml,xsl,html,txt,c}} \
+install -v -m644 doc/{TODO,*.{dtd,xml,xsl,txt,c}} \
     /usr/share/doc/dbus-&dbus-version;</userinput></screen>
+
+    <para>If you built the HTML documentation, install it by issuing the
+    following commands as the <systemitem class="username">root</systemitem> user:</para>
+
+<screen role="root"><userinput>install -v -m644 doc/*.html /usr/share/doc/dbus-&dbus-version;</userinput></screen>
 
     <para>If you built the API documentation, install it by issuing the
     following commands as the <systemitem class="username">root</systemitem> user:</para>
 
-<screen role="root"><userinput>install -v -m755 -d /usr/share/doc/dbus-&dbus-version;/api &amp;&amp;
+<screen role="root"><userinput>install -v -m755 -d /usr/share/doc/dbus-&dbus-version;/api \
+    /usr/share/man/man3dbus &amp;&amp;
 install -v -m644 doc/api/html/* \
-    /usr/share/doc/dbus-&dbus-version;/api</userinput></screen>
+    /usr/share/doc/dbus-&dbus-version;/api &amp;&amp;
+install -v -m644 doc/api/man/man3dbus/* \
+    /usr/share/man/man3dbus</userinput></screen>
 
   </sect2>
 
@@ -210,15 +153,10 @@ install -v -m644 doc/api/html/* \
     <title>Command Explanations</title>
 
     <para><parameter>--localstatedir=/var</parameter>: This parameter causes
-    the daemon PID file to be created in
-    <filename class="directory">/var/run/dbus</filename> instead of
-    <filename class="directory">/usr/var/run/dbus</filename>.</para>
-
-    <para><parameter>--disable-python</parameter>: This parameter is required
-    if <application>Python</application> is not installed. Remove the parameter
-    if <application>Python</application> (and <application>Pyrex</application>)
-    is installed and you wish to build the
-    <application>Python</application> bindings.</para>
+    the daemon PID file, system bus socket and machine uuid file to be
+    created in the <filename class="directory">/var</filename> directory
+    instead of the <filename class="directory">/usr/var</filename>
+    directory.</para>
 
   </sect2>
 
@@ -362,19 +300,16 @@ kill $DBUS_SESSION_BUS_PID</literal></userinput></screen>
 
     <segmentedlist>
       <segtitle>Installed Programs</segtitle>
-      <segtitle>Installed Libraries</segtitle>
+      <segtitle>Installed Library</segtitle>
       <segtitle>Installed Directories</segtitle>
 
       <seglistitem>
-        <seg>dbus-binding-tool, dbus-cleanup-sockets, dbus-daemon, dbus-launch,
-        dbus-monitor, dbus-send and dbus-viewer</seg>
-        <seg>libdbus-1.{so,a} and optionally, dbus-1.jar, libdbus-gcj-1.{so,a},
-        libdbus-glib-1.{so,a}, libdbus-qt-1.{so,a}, libdbus-qt4-1.{so,a},
-        libdbus-mono-1.{so,a} and <application>Python</application>
-        modules</seg>
+        <seg>dbus-cleanup-sockets, dbus-daemon, dbus-launch, dbus-monitor,
+        dbus-send, dbus-uuidgen</seg>
+        <seg>libdbus-1.{so,a}</seg>
         <seg>/etc/dbus-1, /usr/include/dbus-1.0, /usr/lib/dbus-1.0,
-        /usr/lib/python2.4/site-packages/dbus, /usr/share/dbus-1,
-        /usr/share/doc/dbus-&dbus-version; and /var/run/dbus</seg>
+        /usr/share/dbus-1, /usr/share/doc/dbus-&dbus-version;,
+        /usr/share/man/man3dbus, /var/lib/dbus and /var/run/dbus</seg>
       </seglistitem>
     </segmentedlist>
 
@@ -382,17 +317,6 @@ kill $DBUS_SESSION_BUS_PID</literal></userinput></screen>
       <bridgehead renderas="sect3">Short Descriptions</bridgehead>
       <?dbfo list-presentation="list"?>
       <?dbhtml list-presentation="table"?>
-
-      <varlistentry id="dbus-binding-tool">
-        <term><command>dbus-binding-tool</command></term>
-        <listitem>
-          <para>is used to create header files from
-          <application>GLib</application> object files.</para>
-          <indexterm zone="dbus dbus-binding-tool">
-            <primary sortas="b-dbus-binding-tool">dbus-binding-tool</primary>
-          </indexterm>
-        </listitem>
-      </varlistentry>
 
       <varlistentry id="dbus-cleanup-sockets">
         <term><command>dbus-cleanup-sockets</command></term>
@@ -449,13 +373,12 @@ kill $DBUS_SESSION_BUS_PID</literal></userinput></screen>
         </listitem>
       </varlistentry>
 
-      <varlistentry id="dbus-viewer">
-        <term><command>dbus-viewer</command></term>
+      <varlistentry id="dbus-uuidgen">
+        <term><command>dbus-uuidgen</command></term>
         <listitem>
-          <para>is a graphical <application>D-BUS</application> frontend
-          utility.</para>
-          <indexterm zone="dbus dbus-viewer">
-            <primary sortas="b-dbus-viewer">dbus-viewer</primary>
+          <para>is used to generate or read a universally unique ID.</para>
+          <indexterm zone="dbus dbus-uuidgen">
+            <primary sortas="b-dbus-uuidgen">dbus-uuidgen</primary>
           </indexterm>
         </listitem>
       </varlistentry>
