@@ -55,6 +55,9 @@
       <para>July 9th, 2007</para>
       <itemizedlist>
         <listitem>
+          <para>[dnicholson] - Updated D-Bus Core to 1.0.2.</para>
+        </listitem>
+        <listitem>
           <para>[randy] - Created a D-Bus Bindings page and added the GLib
           bindings. Other D-Bus bindings will be added to the same page as they
           are developed.</para>
