@@ -1,3 +1,7 @@
+2007-07-09 Dan Nicholson <dnicholson@linuxfromscratch.org>
+	* Updated the D-Bus bootscript to call dbus-uuidgen on start and
+	  use the system pid file.
+
 2007-07-08 Randy McMurchy <randy@linuxfromscratch.org>
 	* Update the CUPS section of the Makefile to remove the proper
 	  files (upstream changed the S/K naming)
